@startuml

title __ENTER's Class Diagram__\n

  namespace  {
    namespace om.example.fxjgit {
      namespace forms {
        namespace enter {
          class com.example.fxjgit.forms.enter.EnterController {
              + enterButton : Button
              + loginButton : Button
              + menuHbox : HBox
              + registerButton : Button
              + rootNode : BorderPane
              + enterButtonClicked()
              + initialize()
              + loginButtonClicked()
              + nextScene()
              + registerButtonClicked()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.fxjgit {
      namespace forms {
        namespace enter {
          class com.example.fxjgit.forms.enter.LoginController {
              + loginButton : Button
              + menuHbox : HBox
              + passwordField : PasswordField
              + rootNode : BorderPane
              + usernameField : TextField
              ~ parentStage : Stage
              + initialize()
              + loginButtonClicked()
              + setParentStage()
              - login()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.fxjgit {
      namespace forms {
        namespace enter {
          class com.example.fxjgit.forms.enter.RegistrationController {
              + menuHbox : HBox
              + passwordField : PasswordField
              + registerButton : Button
              + rootNode : BorderPane
              + usernameField : TextField
              ~ parentStage : Stage
              + initialize()
              + registerButtonClicked()
              + setParentStage()
              - showEnterButton()
          }
        }
      }
    }
  }
  

  com.example.fxjgit.forms.enter.EnterController o-- com.example.fxjgit.forms.ToolsMenuController : toolsMenuController
  com.example.fxjgit.forms.enter.LoginController o-- com.example.fxjgit.forms.ToolsMenuController : toolsMenuController
  com.example.fxjgit.forms.enter.RegistrationController o-- com.example.fxjgit.forms.ToolsMenuController : toolsMenuController


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
